--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@typescript-eslint/parser": "^5.3.0",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.2.0",
+		"dotenv": "^17.2.3",
 		"eslint": "^8.5.0",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
