--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,33 @@
 # AirMessage Web Environment Configuration
-# Copy this file to .env and update with your values
+#
+# SETUP: Copy this file to .env and fill out the placeholders with your actual values
+#
 
-# AirMessage Connect Server
-REACT_APP_CONNECT_HOSTNAME=wss://airmessage.yourdomain.com
+# Your AirMessage Connect server WebSocket URL (e.g., wss://connect.yourdomain.com)
+REACT_APP_CONNECT_HOSTNAME=
 
-# Google API Configuration
-REACT_APP_GOOGLE_API_KEY=AIzaSyDE2nDAKL6smwPmZIBy1IP8-x_pTOqpzfM
-REACT_APP_GOOGLE_CLIENT_ID=526640769548-gv7t20cb7evjgmnngnl804gm0ec3kl8h.apps.googleusercontent.com
-REACT_APP_GOOGLE_CLIENT_SECRET=AHUS5_B5Ahmas7ioaoiBact0
+# Get from Google Cloud Console - API Key for Google services
+REACT_APP_GOOGLE_API_KEY=
+# Get from Google Cloud Console - OAuth 2.0 Client ID
+REACT_APP_GOOGLE_CLIENT_ID=
+# Get from Google Cloud Console - OAuth 2.0 Client Secret
+REACT_APP_GOOGLE_CLIENT_SECRET=
 
-# Firebase Configuration
-REACT_APP_FIREBASE_API_KEY=AIzaSyDE2nDAKL6smwPmZIBy1IP8-x_pTOqpzfM
-REACT_APP_FIREBASE_AUTH_DOMAIN=yourairmessageproject.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=yourairmessageproject
-REACT_APP_FIREBASE_STORAGE_BUCKET=yourairmessageproject.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=526640769548
-REACT_APP_FIREBASE_APP_ID=1:526640769548:web:2b0b11b66424b3ce805c29
+# Get from Firebase Console - Project Settings - General
+REACT_APP_FIREBASE_API_KEY=
+# Firebase Auth Domain (projectid.firebaseapp.com)
+REACT_APP_FIREBASE_AUTH_DOMAIN=
+# Firebase Project ID
+REACT_APP_FIREBASE_PROJECT_ID=
+# Firebase Storage Bucket (projectid.appspot.com)
+REACT_APP_FIREBASE_STORAGE_BUCKET=
+# Firebase Messaging Sender ID
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
+# Firebase App ID
+REACT_APP_FIREBASE_APP_ID=
 
-# Sentry DSN (optional)
+# Optional: Sentry DSN for error tracking
 # REACT_APP_SENTRY_DSN=
 
-# Local Encryption Key
-REACT_APP_JWK_LOCAL_ENCRYPTION_KEY=s9lDeHtl0rh-3FpBDZwQvw
+# Generate a random base64 string for local encryption
+REACT_APP_JWK_LOCAL_ENCRYPTION_KEY=
